Kubernetes/media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: bazarr
  name: bazarr
  namespace: media
spec:
  selector:
    matchLabels:
      io.kompose.service: bazarr
  template:
    metadata:
      labels:
        io.kompose.service: bazarr
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Warsaw
          image: linuxserver/bazarr:1.5.2
          name: bazarr

          ports:
            - containerPort: 6767
          volumeMounts:
            - mountPath: /config
              name: bazarr-data
            - mountPath: /data
              name: bazarr-storage
      restartPolicy: Always

      volumes:
        - name: bazarr-config
          configMap:
            name: bazarr-config
        - name: bazarr-data
          persistentVolumeClaim:
            claimName: bazarr-data
        - name: bazarr-storage
          hostPath:
            path: /Storage
        - name: arr-scripts
          configMap:
            name: arr-scripts
            defaultMode: 0755
