Kubernetes/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f ./compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
    traefik.enable: "true"
    traefik.http.routers.bazarr.middlewares: crowdsec,default-headers,auth
  labels:
    io.kompose.service: bazarr
  name: bazarr
  namespace: media
spec:
  ports:
    - name: "6767"
      port: 6767
      targetPort: 6767
  selector:
    io.kompose.service: bazarr
