Kubernetes/media/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^bazarr\.(.+)`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - name: bazarr
          port: 6767
